v0.9.0
    Add features to request argument parsing module.
    Support batch query concurrency control.
    Improve elasticsearch error response.

v0.8.5 (2021/1/7)
    Improve es sniff stability under high load.

v0.8.4 (2020/12/8)
    Expose a utility function for convenience.

v0.8.3 (2020/12/8)
    Separate data testing utility from app test.

v0.8.2 (2020/11/17)
    Allow multiple hits in annotation endpoint.
    Refine multi-type JSON argument processing.

v0.8.1 (2020/07/14)
    Improve field type mismatch query behavior.
    Improve requried argument parsing restraint logic.
    Improve metadata generation stability.

v0.8.0 (2020/06/24)
    Add active data metadata generation utility.
    Add metadata routing directly after app prefix.
    Restructure web settings module.

v0.7.3 (2020/06/05)
    Support aggregation on date type fields.
    Support additional json content type headers.

v0.7.2 (2020/05/20)
    Add API root path trailing slash redirection.

v0.7.1 (2020/05/19)
    Improve metadata host info display under dev mode. 

v0.7.0 (2020/05/19)
    Support application/json input.
    Support elasticsearch 7.x in addition to 6.x.
    Support load balancing to database.
    Support multiple web configs.
    Add web parameter options module.
    Restructure web module.

v0.6.0 (2020/04/25):
    Add functionalities to create and publish data release (full & incremental)

v0.5.0 (2019/12/02):
    Support adding license url from datasource metadata. 
    Improve concurrent performance with async elasticsearch transport client.

v0.4.0 (2019/08/07):
    Improve a few test cases and test utility organization.

v0.3.0 (2019/05/01):
    Support Elasticsearch 6.x as the backend, Elasticsearch 2.x is no longer supported.
    Require Python>=3.4.
    Removed httplib2 dependencies.
    Changed "msgpack=1" query parameter to "format=msgpack".
    Support "format=yaml" return format.
    Support "format=html" return format (useful for demo purpose).