@@ -2,6 +2,7 @@ v0.9.0
     Add features to request argument parsing module.
     Support batch query concurrency control.
     Improve elasticsearch error response.
+    Revise query builder customization hook.
 
 v0.8.5 (2021/1/7)
     Improve es sniff stability under high load.
